@@ -131,8 +131,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 303668cdb3754018ca137ea6074801c6927d3987 assets/createbigcannons/blockstates/wrought_iron_drop_mortar_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-06fe2ce42e1b751587dd5f8f254e370e96d0b5d7 assets/createbigcannons/lang/en_ud.json
-28c76c1792f54b53192f54bc8e9e247dc383fb1d assets/createbigcannons/lang/en_us.json
+af8a81492a92b86ddf0ff22b18dbc9bbac81a594 assets/createbigcannons/lang/en_ud.json
+e640fd9cfe3b07b3617c7a2ed40c00cd6bbc62e3 assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
